--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=history
+spring.application.name=history-api
+spring.datasource.url=jdbc:mysql://localhost:3306/historyapi
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+server.port=8080
