feat: implements jwt token verification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
+
+api.security.token.secret = ${JWT_SECRET:my-secret-key}
